fix(logstash/gatling/ci): pipeline-to-pipeline + PQ + test de charge + Github Action (#15)
* fix(logstash): augmentation ingestion avec pattern pipeline-to-pipeline + PQ

* fix: le gsub retired le suffixe

* ajout policy cleanup

* corrige rapport pour lancer uniquement logstash + maj PUT index template

* corrige commentaire

---------

Co-authored-by: Malek <malek.zemni@octo.com>